--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@trendmicro/react-sidenav": "^0.4.5",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.3",
     "font-awesome": "^4.7.0",
     "fontawesome": "^4.7.2",
     "react": "^16.6.3",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.6.3",
     "react-icons": "^3.2.2",
     "react-redux": "^5.1.1",
